refactor and flesh out pages

--- a/index.html
+++ b/index.html
@@ -5,36 +5,40 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Robert Focke</title>
+	<title>Robert Focke</title>
 
-    <!-- Open Graph -->
+	<!-- Open Graph -->
 	<meta property="og:title" content="Robert Focke" />
-    <meta property="og:description" content="Software Engineer specialising in backend web development and data engineering" />
-    <meta property="og:url" content="https://shinroo.github.io" />
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
+	<meta property="og:description"
+		content="Software Engineer specialising in backend web development and data engineering" />
+	<meta property="og:url" content="https://shinroo.github.io" />
+	<meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
 
-    <!-- Fonts -->
+	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
-    <!-- Icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/logos.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/our-work.css">
-    <link rel="stylesheet" href="css/features.css">
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/talks.css">
+	<!-- Icons -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/general.css">
+	<link rel="stylesheet" href="css/logos.css">
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/hero.css">
+	<link rel="stylesheet" href="css/our-work.css">
+	<link rel="stylesheet" href="css/features.css">
+	<link rel="stylesheet" href="css/contact.css">
+	<link rel="stylesheet" href="css/talks.css">
 	<link rel="stylesheet" href="css/footer.css">
 </head>
 
 <body>
-	<!-- VISA Tracking Code for shinroo.github.io --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','600581bd-817b-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for shinroo.github.io -->
+	<!-- VISA Tracking Code for shinroo.github.io -->
+	<script>(function (v, i, s, a, t) { v[t] = v[t] || function () { (v[t].v = v[t].v || []).push(arguments) }; if (!v._visaSettings) { v._visaSettings = {} } v._visaSettings[a] = { v: '1.0', s: a, a: '1', t: t }; var b = i.getElementsByTagName('body')[0]; var p = i.createElement('script'); p.defer = 1; p.async = 1; p.src = s + '?s=' + a; b.appendChild(p) })(window, document, '//app-worker.visitor-analytics.io/main.js', '600581bd-817b-11ed-b589-901b0edac50a', 'va')</script>
+	<!-- VISA Tracking Code for shinroo.github.io -->
 
 	<header>
 		<h2>Showcase</h2>
@@ -44,6 +48,7 @@
 			<li><a href="#talks">Talks</a></li>
 			<li><a href="#demo">Demos</a></li>
 			<li><a href="#contact">Contact</a></li>
+			<li><a href="#organisations">Organisations</a></li>
 		</nav>
 	</header>
 
@@ -57,13 +62,8 @@
 
 	<section id="contributions" class="our-work">
 		<h3 class="title">Contributions</h3>
-		<p>Most of my work takes place on Github, my latest contributions can be seen in the widget</p>
-		<img src="https://github-readme-stats.vercel.app/api?username=shinroo&count_private=true&show_icons=true&hide=contribs">
-		<br>
-		<a href="https://github.com/Rapsssito/github-profile-badge"><small>Credit to widget creator</small></a>
-		<br>
-		<hr>
-		<p>I've contributed to software- and data-oriented projects across a variety of sectors in multiple roles. Some of the projects I've contributed to and companies I've worked for are listed below.</p>
+		<p>I've contributed to software- and data-oriented projects across a variety of sectors in multiple roles. Some
+			of the projects I've contributed to and companies I've worked for are listed below.</p>
 
 		<h4>Click any of the logos for more information</h4>
 		<ul class="grid" id="projects-logos">
@@ -97,37 +97,63 @@
 			</a>
 
 		</ul>
-		
+
 	</section>
 
 	<section id="skillset" class="features">
 		<h3 class="title">Skillset</h3>
-		<p>I'm a generalist developer with mainly backend and data engineering experience. I've used many technologies and I believe that the choice of technology for a project depends on it's requirements and should not depend solely on the experience of the implementors. That being said, I do find it helpful to list some of my preferred technologies below to help illustrate what I've enjoyed using in the past:</p>
+		<p>I'm a specialist software engineer with mainly backend web development and data engineering experience. I've
+			used many technologies throughout my career
+			and I believe that the choice of technology for a project depends on it's requirements and should not depend
+			solely on the experience of the implementors. That being said, I do find it helpful to list some of my
+			preferred technologies below to help illustrate what I've enjoyed using in the past:</p>
 		<hr>
 
 		<ul class="grid">
-			<li>
+			<li style="margin-top: 2vw; margin-bottom: 2vw">
 				<i class="fa fa-code"></i>
 				<h4>Software Engineering</h4>
 				<img alt="Python" class="rectangle" src="assets/img/python-vector.svg" width="220vw">
 				<img alt="Go" class="rectangle" src="assets/img/go.svg" width="190vw">
+				<img alt="BASH" class="rectangle" src="assets/img/bash.png" width="200vw">
+				<img alt="Protocol Buffers" class="rectangle features-logo" src="assets/img/protobuf.png" width="250vw">
+				<img alt="TypeScript" style="margin-right: 0.5vw; margin-left: 0.5vw;" class="square"
+					src="assets/img/typescript.svg" width="100vw">
+			</li>
+			<li style="margin-top: 2vw; margin-bottom: 2vw">
+				<i class="fas fa-database"></i>
+				<h4>Databases</h4>
 				<img alt="PostgresSQL" class="rectangle" src="assets/img/postgres.png" width="220vw">
 				<img alt="MongoDB" class="rectangle" src="assets/img/mongo.svg" width="200vw">
+				<img alt="Neptune" class="square" src="assets/img/neptune.webp" width="150vw">
+				<img alt="DynamoDB" class="square" src="assets/img/ddb-square.png" width="150vw">
+				<img alt="Redis" class="rectangle" src="assets/img/redis.png" width="200vw">
 			</li>
-			<li>
-				<i class="fas fa-database"></i>
+			<li style="margin-top: 2vw; margin-bottom: 2vw">
+				<i class="fas fa-table"></i>
 				<h4>Data Engineering</h4>
 				<img alt="Apache Airflow" class="rectangle" src="assets/img/airflow.png" width="200vw">
 				<img alt="Metabase" class="rectangle" src="assets/img/metabase.svg" width="200vw">
 				<img alt="Argo Workflows" class="rectangle" src="assets/img/argo.svg" width="200vw">
+				<img alt="Jupyter" class="square" src="assets/img/jupyter.png" width="100vw">
 			</li>
-			<li>
+			<li style="margin-top: 2vw; margin-bottom: 2vw">
 				<i class="fa fa-terminal"></i>
 				<h4>Developer Operations</h4>
 				<img alt="Serverless Framework" class="rectangle" src="assets/img/serverless.png" width="200vw">
 				<img alt="Amazon Web Services" class="rectangle" src="assets/img/aws.png" width="200vw">
 				<img alt="Docker, Docker-Compose" class="rectangle" src="assets/img/docker.png" width="200vw">
-				<img alt="Infrastructure as Code with Terraform" class="rectangle" src="assets/img/terraform.jpeg" width="220vw">
+				<img alt="Infrastructure as Code with Terraform" class="rectangle" src="assets/img/terraform.jpeg"
+					width="220vw">
+				<img alt="Github Actions" class="rectangle features-logo" src="assets/img/github_actions.png"
+					width="250vw">
+			</li>
+			<li style="margin-top: 2vw; margin-bottom: 2vw">
+				<i class="fa fa-eye"></i>
+				<h4>Observability</h4>
+				<img alt="Open Telemetry" class="rectangle" src="assets/img/opentelemetry.png" width="200vw">
+				<img alt="Sentry" class="rectangle" src="assets/img/sentry.svg" width="200vw">
+				<img alt="Delve" class="rectangle" src="assets/img/delve.png" width="250vw">
 			</li>
 		</ul>
 	</section>
@@ -193,7 +219,24 @@
 				<a href="https://www.linkedin.com/in/robertfocke/" class="btn">Linkedin</a>
 			</form>
 		</div>
-		
+
+	</section>
+
+	<section id="organisations" class="features">
+		<h3 class="title">Organisations</h3>
+		<p>I am a member of the following organisations</p>
+		<hr>
+
+		<div style="display:flex; flex-direction:row; justify-content:center; align-items:center;">
+			<img style="padding: 5px" class="square our-work-logo" id="logo-pbhsob" src="assets/img/pbhsob.png"
+				width="100" height="100"></img>
+			<img style="padding: 5px" class=" rectangle our-work-logo" id="logo-gi" src="assets/img/gi.png" width="300"
+				height="100"></img>
+			<img style="padding: 5px" class="rectangle our-work-logo" id="logo-ieee-cs" src="assets/img/ieee_cs.png"
+				width="300" height="100"></img>
+		</div>
+
+		<br>
 	</section>
 
 	<footer>
@@ -203,6 +246,8 @@
 		</ul>
 		<br>
 		<a href="pages/general/impressum.html">Impressum</a>
+		<br>
+		<p>Copyright &copy; Robert Focke 2018-2023</p>
 	</footer>
 
 </body>
