--- a/pages/companies/dimr.html
+++ b/pages/companies/dimr.html
@@ -5,43 +5,47 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Robert Focke</title>
+	<title>Robert Focke</title>
 
-    <!-- Open Graph -->
+	<!-- Open Graph -->
 	<meta property="og:title" content="Robert Focke" />
-    <meta property="og:description" content="Software Engineer specialising in backend web development and data engineering" />
-    <meta property="og:url" content="https://shinroo.github.io" />
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
+	<meta property="og:description"
+		content="Software Engineer specialising in backend web development and data engineering" />
+	<meta property="og:url" content="https://shinroo.github.io" />
+	<meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
 
-    <!-- Fonts -->
+	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
-    <!-- Icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="../../css/styles.css">
-    <link rel="stylesheet" href="../../css/general.css">
-    <link rel="stylesheet" href="../../css/logos.css">
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/hero.css">
-    <link rel="stylesheet" href="../../css/our-work.css">
-    <link rel="stylesheet" href="../../css/features.css">
-    <link rel="stylesheet" href="../../css/contact.css">
-    <link rel="stylesheet" href="../../css/talks.css">
+	<!-- Icons -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="../../css/styles.css">
+	<link rel="stylesheet" href="../../css/general.css">
+	<link rel="stylesheet" href="../../css/logos.css">
+	<link rel="stylesheet" href="../../css/header.css">
+	<link rel="stylesheet" href="../../css/hero.css">
+	<link rel="stylesheet" href="../../css/our-work.css">
+	<link rel="stylesheet" href="../../css/features.css">
+	<link rel="stylesheet" href="../../css/contact.css">
+	<link rel="stylesheet" href="../../css/talks.css">
 	<link rel="stylesheet" href="../../css/footer.css">
 </head>
 
 <body>
-	<!-- VISA Tracking Code for shinroo.github.io --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','600581bd-817b-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for shinroo.github.io -->
+	<!-- VISA Tracking Code for shinroo.github.io -->
+	<script>(function (v, i, s, a, t) { v[t] = v[t] || function () { (v[t].v = v[t].v || []).push(arguments) }; if (!v._visaSettings) { v._visaSettings = {} } v._visaSettings[a] = { v: '1.0', s: a, a: '1', t: t }; var b = i.getElementsByTagName('body')[0]; var p = i.createElement('script'); p.defer = 1; p.async = 1; p.src = s + '?s=' + a; b.appendChild(p) })(window, document, '//app-worker.visitor-analytics.io/main.js', '600581bd-817b-11ed-b589-901b0edac50a', 'va')</script>
+	<!-- VISA Tracking Code for shinroo.github.io -->
 
 	<header>
 		<h2>Job Overview</h2>
 		<nav>
 			<li><a href="/">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#key-contributions">Key Contributions</a></li>
+			<li><a href="#overview">Overview</a></li>
+			<li><a href="#key-contributions">Key Contributions</a></li>
 		</nav>
 	</header>
 
@@ -49,29 +53,39 @@
 		<div class="background-image" style="background-image: url(../../assets/img/python.jpg);"></div>
 		<h1>Robert Focke</h1>
 		<h3>Data Engineer, Deutsches Institut für Menschenrechte</h3>
-        <a href="https://www.institut-fuer-menschenrechte.de/" class="btn">Visit Website</a>
+		<a href="https://www.institut-fuer-menschenrechte.de/" class="btn">Visit Website</a>
 	</section>
 
 	<section id="overview" class="our-work">
 		<h3 class="title">Overview</h3>
-        <ul class="grid" id="projects-logos">
+		<ul class="grid" id="projects-logos">
 			<li class="rectangle our-work-logo" id="logo-dimr"></li>
-        </ul>
-        <p>The German Institute for Human Rights (GIHR) contributes to the promotion and the protection of human rights mainly by offering policy advice and raising awareness on human rights issues with relevance both for the domestic and international spheres.</p>
-        <p>The GIHR addresses policy and law makers, as well as civil society actors, at all levels of the federal structure of Germany with a variety of formats: policy papers and legal analyses, monitoring reports, expert panels and seminars, human rights education and training programs, as well as documentation and library services.</p>
-		<p>I was recruited to work with the institute on a part-time basis, collaborating with researchers and legal experts in the international human rights politics department.</p>
+		</ul>
+		<p>The German Institute for Human Rights (GIHR) contributes to the promotion and the protection of human rights
+			mainly by offering policy advice and raising awareness on human rights issues with relevance both for the
+			domestic and international spheres.</p>
+		<p>The GIHR addresses policy and law makers, as well as civil society actors, at all levels of the federal
+			structure of Germany with a variety of formats: policy papers and legal analyses, monitoring reports, expert
+			panels and seminars, human rights education and training programs, as well as documentation and library
+			services.</p>
+		<p>I was recruited to work with the institute on a part-time basis, collaborating with researchers and legal
+			experts in the international human rights politics department.</p>
 	</section>
 
-    <section id="key-contributions" class="features">
+	<section id="key-contributions" class="features">
 		<h3 class="title">Key Contributions</h3>
 
 		<h4 class="showcase-gap title">End-to-end data work on a media analysis project</h4>
 		<h5 class="showcase-gap showcase-light ">Data Engineer, 2019-2020</h5>
 
-		<p>Delivered an end-to-end data project from data collection to operations and analysis on a minimal budget. The data work was used by researchers to analyse large amounts of data in a summarised fashion.</p>
-		<p>Wrote self-learning webscrapers which retrieved page content, author details and date from various blogs, news sites and social media. The scrapers were implemented in python using Scrapy, and autoscraper</p>
-		<p>Various NLP tasks were carried out on the collected data, in order to extract trends in the topics which were being discussed. Both scraping and analysis pipelines were hosted on a Digital Ocean Kubernetes cluster.</p>
-		<p>Set up text-based indices using pg-trigram and postgres to speed up metabase dashboard load times. Dashboards were developed in an iterative fashion with feedback from the stakeholders of the project.</p>
+		<p>Delivered an end-to-end data project from data collection to operations and analysis on a minimal budget. The
+			data work was used by researchers to analyse large amounts of data in a summarised fashion.</p>
+		<p>Wrote self-learning webscrapers which retrieved page content, author details and date from various blogs,
+			news sites and social media. The scrapers were implemented in python using Scrapy, and autoscraper</p>
+		<p>Various NLP tasks were carried out on the collected data, in order to extract trends in the topics which were
+			being discussed. Both scraping and analysis pipelines were hosted on a Digital Ocean Kubernetes cluster.</p>
+		<p>Set up text-based indices using pg-trigram and postgres to speed up metabase dashboard load times. Dashboards
+			were developed in an iterative fashion with feedback from the stakeholders of the project.</p>
 
 		<hr>
 	</section>
@@ -83,6 +97,8 @@
 		</ul>
 		<br>
 		<a href="../general/impressum.html">Impressum</a>
+		<br>
+		<p>Copyright &copy; Robert Focke 2018-2023</p>
 	</footer>
 
 </body>
