--- a/pages/companies/hikaya.html
+++ b/pages/companies/hikaya.html
@@ -5,44 +5,48 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Robert Focke</title>
+	<title>Robert Focke</title>
 
-    <!-- Open Graph -->
+	<!-- Open Graph -->
 	<meta property="og:title" content="Robert Focke" />
-    <meta property="og:description" content="Software Engineer specialising in backend web development and data engineering" />
-    <meta property="og:url" content="https://shinroo.github.io" />
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
+	<meta property="og:description"
+		content="Software Engineer specialising in backend web development and data engineering" />
+	<meta property="og:url" content="https://shinroo.github.io" />
+	<meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
 
-    <!-- Fonts -->
+	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
-    <!-- Icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="../../css/styles.css">
-    <link rel="stylesheet" href="../../css/general.css">
-    <link rel="stylesheet" href="../../css/logos.css">
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/hero.css">
-    <link rel="stylesheet" href="../../css/our-work.css">
-    <link rel="stylesheet" href="../../css/features.css">
-    <link rel="stylesheet" href="../../css/contact.css">
-    <link rel="stylesheet" href="../../css/talks.css">
+	<!-- Icons -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="../../css/styles.css">
+	<link rel="stylesheet" href="../../css/general.css">
+	<link rel="stylesheet" href="../../css/logos.css">
+	<link rel="stylesheet" href="../../css/header.css">
+	<link rel="stylesheet" href="../../css/hero.css">
+	<link rel="stylesheet" href="../../css/our-work.css">
+	<link rel="stylesheet" href="../../css/features.css">
+	<link rel="stylesheet" href="../../css/contact.css">
+	<link rel="stylesheet" href="../../css/talks.css">
 	<link rel="stylesheet" href="../../css/footer.css">
 
 </head>
 
 <body>
-	<!-- VISA Tracking Code for shinroo.github.io --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','600581bd-817b-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for shinroo.github.io -->
+	<!-- VISA Tracking Code for shinroo.github.io -->
+	<script>(function (v, i, s, a, t) { v[t] = v[t] || function () { (v[t].v = v[t].v || []).push(arguments) }; if (!v._visaSettings) { v._visaSettings = {} } v._visaSettings[a] = { v: '1.0', s: a, a: '1', t: t }; var b = i.getElementsByTagName('body')[0]; var p = i.createElement('script'); p.defer = 1; p.async = 1; p.src = s + '?s=' + a; b.appendChild(p) })(window, document, '//app-worker.visitor-analytics.io/main.js', '600581bd-817b-11ed-b589-901b0edac50a', 'va')</script>
+	<!-- VISA Tracking Code for shinroo.github.io -->
 
 	<header>
 		<h2>Job Overview</h2>
 		<nav>
 			<li><a href="/">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#key-contributions">Key Contributions</a></li>
+			<li><a href="#overview">Overview</a></li>
+			<li><a href="#key-contributions">Key Contributions</a></li>
 		</nav>
 	</header>
 
@@ -50,25 +54,35 @@
 		<div class="background-image" style="background-image: url(../../assets/img/python.jpg);"></div>
 		<h1>Robert Focke</h1>
 		<h3>Backend Engineer, Hikaya</h3>
-        <a href="https://hikaya.io" class="btn">Visit Website</a>
+		<a href="https://hikaya.io" class="btn">Visit Website</a>
 	</section>
 
 	<section id="overview" class="our-work">
 		<h3 class="title">Overview</h3>
-        <ul class="grid" id="projects-logos">
+		<ul class="grid" id="projects-logos">
 			<li class="square our-work-logo" id="logo-hikaya"></li>
-        </ul>
-        <p>Hikaya means story in Arabic. Hikaya's mission is to help nonprofits and non-governmental organizations (NGOs) to tell their story of impact through data and technology. They work alongside international development and humanitarian organizations of all sizes to assess their digital needs based on the principles of digital development and lay the groundwork for their digital transformation roadmap.</p>
-        <p>Hikaya achieves this by introducing a set of integrated tools that re-engineer how data is used within organizations. By building open source solutions on common data standards, they improve the delivery of goods and services to those most in need while making reporting to funders more transparent.</p>
-    </section>
+		</ul>
+		<p>Hikaya means story in Arabic. Hikaya's mission is to help nonprofits and non-governmental organizations
+			(NGOs) to tell their story of impact through data and technology. They work alongside international
+			development and humanitarian organizations of all sizes to assess their digital needs based on the
+			principles of digital development and lay the groundwork for their digital transformation roadmap.</p>
+		<p>Hikaya achieves this by introducing a set of integrated tools that re-engineer how data is used within
+			organizations. By building open source solutions on common data standards, they improve the delivery of
+			goods and services to those most in need while making reporting to funders more transparent.</p>
+	</section>
 
-    <section id="key-contributions" class="features">
+	<section id="key-contributions" class="features">
 		<h3 class="title">Key Contributions</h3>
 
 		<h4 class="showcase-gap title">Development of location picker component for Hikaya Activity</h4>
 		<h5 class="showcase-gap showcase-light ">Backend Engineer, 2020</h5>
 
-		<p></p>
+		<p>I developed some work pro bono for the project, including the development of a UI component allowing users of
+			the Hikaya Activity application to select their location on an OSM/Leaflet map widget.</p>
+
+		<script src="https://gist.github.com/shinroo/6fa7dd80fd0bb3c743eb0226981f1a80.js"></script>
+
+		<br>
 
 		<hr>
 	</section>
@@ -80,6 +94,8 @@
 		</ul>
 		<br>
 		<a href="../general/impressum.html">Impressum</a>
+		<br>
+		<p>Copyright &copy; Robert Focke 2018-2023</p>
 	</footer>
 
 </body>
