--- a/pages/companies/zula.html
+++ b/pages/companies/zula.html
@@ -5,44 +5,48 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Robert Focke</title>
+	<title>Robert Focke</title>
 
-    <!-- Open Graph -->
+	<!-- Open Graph -->
 	<meta property="og:title" content="Robert Focke" />
-    <meta property="og:description" content="Software Engineer specialising in backend web development and data engineering" />
-    <meta property="og:url" content="https://shinroo.github.io" />
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
+	<meta property="og:description"
+		content="Software Engineer specialising in backend web development and data engineering" />
+	<meta property="og:url" content="https://shinroo.github.io" />
+	<meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
 
-    <!-- Fonts -->
+	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
-    <!-- Icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="../../css/styles.css">
-    <link rel="stylesheet" href="../../css/general.css">
-    <link rel="stylesheet" href="../../css/logos.css">
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/hero.css">
-    <link rel="stylesheet" href="../../css/our-work.css">
-    <link rel="stylesheet" href="../../css/features.css">
-    <link rel="stylesheet" href="../../css/contact.css">
-    <link rel="stylesheet" href="../../css/talks.css">
+	<!-- Icons -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="../../css/styles.css">
+	<link rel="stylesheet" href="../../css/general.css">
+	<link rel="stylesheet" href="../../css/logos.css">
+	<link rel="stylesheet" href="../../css/header.css">
+	<link rel="stylesheet" href="../../css/hero.css">
+	<link rel="stylesheet" href="../../css/our-work.css">
+	<link rel="stylesheet" href="../../css/features.css">
+	<link rel="stylesheet" href="../../css/contact.css">
+	<link rel="stylesheet" href="../../css/talks.css">
 	<link rel="stylesheet" href="../../css/footer.css">
 
 </head>
 
 <body>
-	<!-- VISA Tracking Code for shinroo.github.io --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','600581bd-817b-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for shinroo.github.io -->
+	<!-- VISA Tracking Code for shinroo.github.io -->
+	<script>(function (v, i, s, a, t) { v[t] = v[t] || function () { (v[t].v = v[t].v || []).push(arguments) }; if (!v._visaSettings) { v._visaSettings = {} } v._visaSettings[a] = { v: '1.0', s: a, a: '1', t: t }; var b = i.getElementsByTagName('body')[0]; var p = i.createElement('script'); p.defer = 1; p.async = 1; p.src = s + '?s=' + a; b.appendChild(p) })(window, document, '//app-worker.visitor-analytics.io/main.js', '600581bd-817b-11ed-b589-901b0edac50a', 'va')</script>
+	<!-- VISA Tracking Code for shinroo.github.io -->
 
 	<header>
 		<h2>Job Overview</h2>
 		<nav>
 			<li><a href="/">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#key-contributions">Key Contributions</a></li>
+			<li><a href="#overview">Overview</a></li>
+			<li><a href="#key-contributions">Key Contributions</a></li>
 		</nav>
 	</header>
 
@@ -50,37 +54,45 @@
 		<div class="background-image" style="background-image: url(../../assets/img/python.jpg);"></div>
 		<h1>Robert Focke</h1>
 		<h3>Technical Co-Founder, Zula The Reading Tribe</h3>
-        <a href="https://github.com/reading-tribe" class="btn">Visit Website</a>
+		<a href="https://github.com/reading-tribe" class="btn">Visit Website</a>
 	</section>
 
 	<section id="overview" class="our-work">
 		<h3 class="title">Overview</h3>
-        <ul class="grid" id="projects-logos">
+		<ul class="grid" id="projects-logos">
 			<li class="square our-work-logo" id="logo-zula"></li>
-        </ul>
-        <p>Zula is on a mission to amplify diversity and inclusion in children's libraries and bookshelves around the globe! The project aimed to translate children's books and provide them to parents and children via mobile and web-based applications.</p>
-		<p>I was asked to be a co-founder by Alain Missala, the founder of the project, and was involved for the first 2 years of it's existence. I lead all the technical work in the project, from kickstarting a React based web-app to setting up scrapers to collect books for translation. I also delivered a serverless backend to drive the web application.</p>
-		<p>As a founding team, we worked together to set up a business plan to secure initial funding through House of Resources Berlin, an organisation supported by the German ministry for Interior and Homeland Affairs.</p>
-	
+		</ul>
+		<p>Zula is on a mission to amplify diversity and inclusion in children's libraries and bookshelves around the
+			globe! The project aimed to translate children's books and provide them to parents and children via mobile
+			and web-based applications.</p>
+		<p>I was asked to be a co-founder by Alain Missala, the founder of the project, and was involved for the first 2
+			years of it's existence. I lead all the technical work in the project, from kickstarting a React based
+			web-app to setting up scrapers to collect books for translation. I also delivered a serverless backend to
+			drive the web application.</p>
+		<p>As a founding team, we worked together to set up a business plan to secure initial funding through House of
+			Resources Berlin, an organisation supported by the German ministry for Interior and Homeland Affairs.</p>
+
 		<div style="display: flex; flex-direction: row; gap: 10px;">
-            <img alt="House of Resources Berlin logo" class="square" src="../../assets/img/hor.png" width="200vw">
-        </div>
+			<img alt="House of Resources Berlin logo" class="square" src="../../assets/img/hor.png" width="200vw">
+		</div>
 	</section>
 
-    <section id="key-contributions" class="features">
+	<section id="key-contributions" class="features">
 		<h3 class="title">Key Contributions</h3>
 
 		<h4 class="showcase-gap title">Web scraping open source book projects</h4>
 		<h5 class="showcase-gap showcase-light ">Technical Co-Founder, 2021</h5>
 
-		<p>Set up webscrapers with Python to download a 200+ books from public domain book projects. Post-processing of books into specific folder structure for translators to translate books into German and French.</p>
+		<p>Set up webscrapers with Python to download a 200+ books from public domain book projects. Post-processing of
+			books into specific folder structure for translators to translate books into German and French.</p>
 
 		<hr>
 
-        <h4 class="showcase-gap title">Development of API serving mobile applications</h4>
+		<h4 class="showcase-gap title">Development of API serving mobile applications</h4>
 		<h5 class="showcase-gap showcase-light ">Technical Co-Founder, 2021</h5>
 
-		<p>I used Golang, DynamoDB, S3 and AWS Lambda to deliver a low-cost and scalable API to power the mobile and web applications under development by Zula.</p>
+		<p>I used Golang, DynamoDB, S3 and AWS Lambda to deliver a low-cost and scalable API to power the mobile and web
+			applications under development by Zula.</p>
 
 		<hr>
 	</section>
@@ -92,6 +104,8 @@
 		</ul>
 		<br>
 		<a href="../general/impressum.html">Impressum</a>
+		<br>
+		<p>Copyright &copy; Robert Focke 2018-2023</p>
 	</footer>
 
 </body>
