--- a/pages/general/impressum.html
+++ b/pages/general/impressum.html
@@ -2,24 +2,26 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Robert Focke</title>
 
     <!-- Open Graph -->
-	<meta property="og:title" content="Robert Focke" />
-    <meta property="og:description" content="Software Engineer specialising in backend web development and data engineering" />
+    <meta property="og:title" content="Robert Focke" />
+    <meta property="og:description"
+        content="Software Engineer specialising in backend web development and data engineering" />
     <meta property="og:url" content="https://shinroo.github.io" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/15915453?v=4" />
 
     <!-- Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
     <!-- Icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../../css/styles.css">
     <link rel="stylesheet" href="../../css/general.css">
@@ -30,31 +32,33 @@
     <link rel="stylesheet" href="../../css/features.css">
     <link rel="stylesheet" href="../../css/contact.css">
     <link rel="stylesheet" href="../../css/talks.css">
-	<link rel="stylesheet" href="../../css/footer.css">
+    <link rel="stylesheet" href="../../css/footer.css">
 
 </head>
 
 <body>
-    <!-- VISA Tracking Code for shinroo.github.io --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','600581bd-817b-11ed-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for shinroo.github.io -->
+    <!-- VISA Tracking Code for shinroo.github.io -->
+    <script>(function (v, i, s, a, t) { v[t] = v[t] || function () { (v[t].v = v[t].v || []).push(arguments) }; if (!v._visaSettings) { v._visaSettings = {} } v._visaSettings[a] = { v: '1.0', s: a, a: '1', t: t }; var b = i.getElementsByTagName('body')[0]; var p = i.createElement('script'); p.defer = 1; p.async = 1; p.src = s + '?s=' + a; b.appendChild(p) })(window, document, '//app-worker.visitor-analytics.io/main.js', '600581bd-817b-11ed-b589-901b0edac50a', 'va')</script>
+    <!-- VISA Tracking Code for shinroo.github.io -->
 
-	<header>
-		<h2>Legal</h2>
-		<nav>
-			<li><a href="/">Home</a></li>
+    <header>
+        <h2>Legal</h2>
+        <nav>
+            <li><a href="/">Home</a></li>
             <li><a href="#impressum">Impressum</a></li>
-		</nav>
-	</header>
+        </nav>
+    </header>
 
-	<section id="home" class="hero">
-		<div class="background-image" style="background-image: url(../../assets/img/python.jpg);"></div>
-		<h1>Robert Focke</h1>
-		<h3>Imprint / Impressum</h3>
-	</section>
+    <section id="home" class="hero">
+        <div class="background-image" style="background-image: url(../../assets/img/python.jpg);"></div>
+        <h1>Robert Focke</h1>
+        <h3>Imprint / Impressum</h3>
+    </section>
 
     <section id="impressum" class="features">
-		<h3 class="title">Impressum</h3>
+        <h3 class="title">Impressum</h3>
 
-		<h4 class="showcase-gap title">Diensteanbieter</h4>
+        <h4 class="showcase-gap title">Diensteanbieter</h4>
         <p>Robert Focke</p>
         <p>Schillerpromenade 9</p>
         <p>12049 Neukölln</p>
@@ -76,7 +80,9 @@
         <br>
 
         <h4 class="showcase-gap title">Online-Streitbeilegung (OS)</h4>
-        <p>Online-Streitbeilegung: Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit, die Sie unter https://ec.europa.eu/consumers/odr/ finden. Verbraucher haben die Möglichkeit, diese Plattform für die Beilegung ihrer Streitigkeiten zu nutzen.</p>
+        <p>Online-Streitbeilegung: Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS)
+            bereit, die Sie unter https://ec.europa.eu/consumers/odr/ finden. Verbraucher haben die Möglichkeit, diese
+            Plattform für die Beilegung ihrer Streitigkeiten zu nutzen.</p>
 
         <br>
 
@@ -87,17 +93,20 @@
 
         <br>
 
-        <h5 class="showcase-gap showcase-light ">Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas Schwenke</h5>
-	</section>
+        <h5 class="showcase-gap showcase-light ">Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas
+            Schwenke</h5>
+    </section>
 
-	<footer>
-		<ul>
-			<li><a href="https://www.linkedin.com/in/robertfocke/"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/shinroo"><i class="fab fa-github"></i></a></li>
-		</ul>
+    <footer>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/robertfocke/"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/shinroo"><i class="fab fa-github"></i></a></li>
+        </ul>
         <br>
-		<a href="#">Impressum</a>
-	</footer>
+        <a href="#">Impressum</a>
+        <br>
+        <p>Copyright &copy; Robert Focke 2018-2023</p>
+    </footer>
 
 </body>
 
