--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 	<section id="organisations" class="features">
 		<h3 class="title">Organisations</h3>
-		<p>I am a member of the following organisations</p>
+		<p>I am, or was at one point, affiliated with the following professional and educational organisations.</p>
 		<hr>
 
 		<div style="display:flex; flex-direction:row; justify-content:center; align-items:center;">
@@ -233,6 +233,20 @@
 			<img style="padding: 5px" class=" rectangle our-work-logo" id="logo-gi" src="assets/img/gi.png" width="300"
 				height="100"></img>
 			<img style="padding: 5px" class="rectangle our-work-logo" id="logo-ieee-cs" src="assets/img/ieee_cs.png"
+				width="300" height="100"></img>
+		</div>
+
+		<div style="display:flex; flex-direction:row; justify-content:center; align-items:center;">
+			<img style="padding: 5px" class="square our-work-logo" id="logo-tub" src="assets/img/tub.jpeg" width="100"
+				height="100"></img>
+			<img style="padding: 5px" class="rectangle our-work-logo" id="logo-uol" src="assets/img/uol.png" width="300"
+				height="100"></img>
+			<img style="padding: 5px" class="square our-work-logo" id="logo-fsf" src="assets/img/fsf.png" width="100"
+				height="100"></img>
+		</div>
+
+		<div style="display:flex; flex-direction:row; justify-content:center; align-items:center;">
+			<img style="padding: 5px" class="rectangle our-work-logo" id="logo-gdsc" src="assets/img/gdsc.png"
 				width="300" height="100"></img>
 		</div>
 
