Update with new role and CV

--- a/pages/companies/muzz.html
+++ b/pages/companies/muzz.html
@@ -94,6 +94,16 @@
 
 		<img width="500px" src="../../assets/img/muzz_social.png">
 
+		<hr>
+
+		<h4 class="showcase-gap title">Stepping in to lead the backend and DevOps functions at Muzz</h4>
+		<h5 class="showcase-gap showcase-light ">Interim Head of Backend Engineering, 2026 - present</h5>
+
+		<p>As a result of a medical absence, I temporarily stepped up to lead the Backend Engineering and DevOps teams at Muzz.
+			In this capacity I worked closely with the CTO, CEO and leads of the backend chapters to ensure that cost, risk and latency are properly managed.
+			Assisting in the architecting, planning and project management of various initiatives across the teams.
+		</p>
+
 	</section>
 
 	<footer>
