--- a/pages/companies/muzz.html
+++ b/pages/companies/muzz.html
@@ -48,7 +48,7 @@
 	<section id="home" class="hero">
 		<div class="background-image" style="background-image: url(../../assets/img/python.jpg);"></div>
 		<h1>Robert Focke</h1>
-		<h3>Lead Backend Engineer, Muzz</h3>
+		<h3>Interim Head of Backend Engineering, Muzz</h3>
 		<a href="https://muzz.com/en-GB" class="btn">Visit Website</a>
 	</section>
 
@@ -93,6 +93,8 @@
 			Australia, with no downtime on launch.</p>
 
 		<img width="500px" src="../../assets/img/muzz_social.png">
+
+		<br>
 
 		<hr>
 
